testing spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.security.user.name=admin
+spring.security.user.password=admin
 spring.datasource.url=jdbc:mysql://localhost:3306/pfa_00?serverTimezone=UTC
 spring.datasource.username=admin
 spring.datasource.password=admin
@@ -6,3 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.thymeleaf.enabled=true
+
+
