--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/pfa_00?serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=root
+spring.datasource.password=
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
