--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/pfa_00?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/pfa_01?serverTimezone=UTC
 spring.datasource.username=admin
 spring.datasource.password=admin
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.thymeleaf.enabled=true
 
